benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/debug/bignum_ModExpPow2_Add_DivMod_iter5_error.log
=== Verification Error - Iteration 5 ===
File: benchmarks/verus/bignum/files/bignum_ModExpPow2_Add_DivMod.rs
Time: 2025-09-15 11:01:35

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error: invalid suffix `nat` for number literal
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_DivMod_impl.rs:124:36
    |
124 |         let mod_val = if sx_int == 0nat { 0nat } else { 1nat } % Str2Int(sz@);
    |                                    ^^^^ invalid suffix `nat`
    |
    = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_DivMod_impl.rs:124:43
    |
124 |         let mod_val = if sx_int == 0nat { 0nat } else { 1nat } % Str2Int(sz@);
    |                                           ^^^^ invalid suffix `nat`
    |
    = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_DivMod_impl.rs:124:57
    |
124 |         let mod_val = if sx_int == 0nat { 0nat } else { 1nat } % Str2Int(sz@);
    |                                                         ^^^^ invalid suffix `nat`
    |
    = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_DivMod_impl.rs:126:23
    |
126 |         if mod_val == 0nat {
    |                       ^^^^ invalid suffix `nat`
    |
    = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_DivMod_impl.rs:113:13
    |
113 |     if n == 0 {
    |        -    ^ expected `int`, found integer
    |        |
    |        expected because this is `vstd::prelude::int`

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_DivMod_impl.rs:133:29
    |
133 |         let half_len = (n + 1) / 2;
    |                         -   ^ expected `int`, found integer
    |                         |
    |                         expected because this is `vstd::prelude::int`

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_DivMod_impl.rs:133:34
    |
133 |         let half_len = (n + 1) / 2;
    |                        -------   ^ expected `int`, found integer
    |                        |
    |                        expected because this is `vstd::prelude::int`

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_DivMod_impl.rs:134:42
    |
134 |         let half = ModExpPow2(sx, &sy[0..half_len], (n / 2), sz);
    |                                          ^^^^^^^^ expected integer, found `int`

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_DivMod_impl.rs:134:58
    |
134 |         let half = ModExpPow2(sx, &sy[0..half_len], (n / 2), sz);
    |                                                      -   ^ expected `int`, found integer
    |                                                      |
    |                                                      expected because this is `vstd::prelude::int`

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_DivMod_impl.rs:135:59
    |
135 |         let full = ModExpPow2(&half.as_slice(), &sx, (n / 2), sz);
    |                                                       -   ^ expected `int`, found integer
    |                                                       |
    |                                                       expected because this is `vstd::prelude::int`

error: aborting due to 10 previous errors

For more information about this error, try `rustc --explain E0308`.

--------------------------------------------------------------------------------

Additional Output:
error: invalid suffix `nat` for number literal
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_DivMod_impl.rs:124:36
    |
124 |         let mod_val = if sx_int == 0nat { 0nat } else { 1nat } % Str2Int(sz@);
    |                                    ^^^^ invalid suffix `nat`
    |
    = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_DivMod_impl.rs:124:43
    |
124 |         let mod_val = if sx_int == 0nat { 0nat } else { 1nat } % Str2Int(sz@);
    |                                           ^^^^ invalid suffix `nat`
    |
    = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_DivMod_impl.rs:124:57
    |
124 |         let mod_val = if sx_int == 0nat { 0nat } else { 1nat } % Str2Int(sz@);
    |                                                         ^^^^ invalid suffix `nat`
    |
    = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_DivMod_impl.rs:126:23
    |
126 |         if mod_val == 0nat {
    |                       ^^^^ invalid suffix `nat`
    |
    = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_DivMod_impl.rs:113:13
    |
113 |     if n == 0 {
    |        -    ^ expected `int`, found integer
    |        |
    |        expected because this is `vstd::prelude::int`

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_DivMod_impl.rs:133:29
    |
133 |         let half_len = (n + 1) / 2;
    |                         -   ^ expected `int`, found integer
    |                         |
    |                         expected because this is `vstd::prelude::int`

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_DivMod_impl.rs:133:34
    |
133 |         let half_len = (n + 1) / 2;
    |                        -------   ^ expected `int`, found integer
    |                        |
    |                        expected because this is `vstd::prelude::int`

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_DivMod_impl.rs:134:42
    |
134 |         let half = ModExpPow2(sx, &sy[0..half_len], (n / 2), sz);
    |                                          ^^^^^^^^ expected integer, found `int`

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_DivMod_impl.rs:134:58
    |
134 |         let half = ModExpPow2(sx, &sy[0..half_len], (n / 2), sz);
    |                                                      -   ^ expected `int`, found integer
    |                                                      |
    |                                                      expected because this is `vstd::prelude::int`

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_DivMod_impl.rs:135:59
    |
135 |         let full = ModExpPow2(&half.as_slice(), &sx, (n / 2), sz);
    |                                                       -   ^ expected `int`, found integer
    |                                                       |
    |                                                       expected because this is `vstd::prelude::int`

error: aborting due to 10 previous errors

For more information about this error, try `rustc --explain E0308`.
